# amanuensis

./: .gitignore  .travis.yml  CMakeLists.txt  NOTICE.md  QT_LICENSE_TEMPLATE.txt  README.md  SMJobBlessUtil.py  amanuensis-common.pri  amanuensis.pro  logo.afdesign  mac-common.pri  trusty-constants.pri  trusty-libs.pri
.ci/: configure-codesigning.sh  install-deps.sh  test
.github/workflows/: ci.yml
Amanuensis.app/Contents/: Info.plist
amanuensis-core/: Amanuensis.cpp  Amanuensis.h  Connection.cpp  Connection.h  ConnectionManager.cpp  Headers.cpp  Headers.h  Proxy.cpp  Proxy.h  Request.cpp  Request.h  RequestParser.cpp  Response.cpp  Response.h  Server.cpp  Server.h  amanuensis-core.pro  global.h  test.cpp
amanuensis-core/win/: RegistryKey.cpp  WindowsProxy.cpp  WindowsProxy.h
app/: CMakeLists.txt  Info.plist  LogSetup.cpp  LogSetup.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProxyFactory.cpp  ProxyFactory.h  QtLogWriter.cpp  QtLogWriter.h  TransactionFile.cpp  TransactionFile.h  TransactionModel.cpp  TransactionModel.h  app.pro  main.cpp  resources.qrc
app/mac/: MacLogSetup.cpp  MacLogSetup.h  MacProxy.cpp  MacProxy.h  TrustyCommon.h  XpcServiceClient.cpp  XpcServiceClient.h
app/mac/installer/: CMakeDMGScript.scpt
app/win/: WindowsLogSetup.cpp  WindowsLogSetup.h  WindowsProxy.cpp  WindowsProxy.h
cmake/: AddTest.cmake
cmake/ext/: asio.cmake  date.cmake  spdlog.cmake
core/: Amanuensis.h  CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionPool.cpp  ConnectionPool.h  Dates.cpp  Dates.h  Errors.cpp  Errors.h  Headers.cpp  Headers.h  HttpMessage.cpp  HttpMessage.h  HttpMessageParser.cpp  HttpMessageParser.h  Listenable.h  Logging.cpp  Logging.h  ObjectPool.h  Proxy.cpp  Proxy.h  ProxyFactory.cpp  ProxyFactory.h  ProxyTransaction.cpp  ProxyTransaction.h  Request.cpp  Request.h  RequestParser.cpp  RequestParser.h  Response.cpp  Response.h  Server.cpp  Server.h  Transaction.cpp  Transaction.h  asiofwd.h  common.h  (+4 more)
core-test/: CMakeLists.txt  DatesTests.cpp  DatesTests.h  HttpMessageParserTests.cpp  HttpMessageParserTests.h  ProxyTransactionTests.cpp  ProxyTransactionTests.h  RequestParserTests.cpp  RequestParserTests.h  RequestTest.cpp  RequestTest.h  core-test.pro  main.cpp  target_wrapper.bat
core/include/core/: ConnectionPool.h  Dates.h  Errors.h  Headers.h  HttpMessage.h  HttpMessageParser.h  IConnection.h  Listenable.h  Logging.h  ObjectPool.h  Proxy.h  ProxyFactory.h  ProxyTransaction.h  Request.h  Response.h  Server.h  Transaction.h  asiofwd.h  common.h  global.h
core/mac/: OsLogSink.cpp  OsLogSink.h
core/src/: AsioConnection.cpp  AsioConnection.h  ConnectionPool.cpp  Dates.cpp  DatesTests.cpp  DatesTests.h  Errors.cpp  Headers.cpp  HeadersTests.cpp  HeadersTests.h  HttpMessage.cpp  HttpMessageParser.cpp  HttpMessageParserTests.cpp  HttpMessageParserTests.h  Logging.cpp  Proxy.cpp  ProxyFactory.cpp  ProxyTransaction.cpp  Request.cpp  RequestTest.cpp  RequestTest.h  Response.cpp  Server.cpp  Transaction.cpp
core/src/mac/: OsLogSink.cpp  OsLogSink.h
core/src/win/: RegistryKey.h  WindowsProxy.cpp  WindowsProxy.h
core/win/: OutputDebugStringSink.cpp  OutputDebugStringSink.h  WindowsProxy.cpp  WindowsProxy.h
docs/: MacBuildNotes
keygen/: .gitignore  ama.conf  apple.conf  install_codesigning_cert.sh
log/: CMakeLists.txt  Log.cpp  Log.h  StringStreamLogValueVisitor.h  log.pro
log/include/log/: Log.h  OsLogWriter.h  OutputDebugStringWriter.h  StringStreamLogValueVisitor.h
log/src/: Log.cpp  OsLogWriter.cpp  OutputDebugStringWriter.cpp
trusty/: AuthorizedService.cpp  AuthorizedService.h  CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  LocalServer.cpp  LocalServer.h  OSLoggable.cpp  OSLoggable.h  Server.cpp  Server.h  TrustyServer.cpp  TrustyServer.h  TrustyService.cpp  TrustyService.h  TrustyServiceTests.cpp  TrustyServiceTests.h  XpcServer.cpp  XpcServer.h  constants.h.in  main.cpp  trusty-info.plist  trusty-launchd.plist  trusty.pro
trusty-interface/: Bytes.h  CFRef.h  CMakeLists.txt  Command.cpp  CommandRegistry.cpp  CommandRegistry.h  IService.h  MessageProcessor.cpp  MessageProcessor.h  OsLogSink.cpp  OsLogSink.h  ProxyState.cpp  Service.cpp  Service.h  TLog.cpp  TLog.h  TrustyCommon.cpp  TrustyCommon.h  UnixSocket.cpp  UnixSocket.h  trusty-interface.pro
trusty-interface/include/trusty/: Bytes.h  CFLog.h  CFRef.h  IMessage.h  IService.h  ISocket.h  MessageProcessor.h  OsLogSink.h  ProxyState.h  Service.h  TLog.h  TrustyCommon.h
trusty-interface/src/: CFLog.cpp  Message.cpp  MessageProcessor.cpp  MessageProcessorTest.cpp  MessageProcessorTest.h  OsLogSink.cpp  ProxyState.cpp  ProxyStateTest.cpp  ProxyStateTest.h  Service.cpp  TLog.cpp  TrustyCommon.cpp  UnixSocket.cpp  UnixSocket.h
trusty-test/: BytesTest.cpp  BytesTest.h  CMakeLists.txt  MessageProcessorTest.cpp  MessageProcessorTest.h  ProxyStateTest.cpp  main.cpp  trusty-test.pro
